router/apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__default_config_has_defaults.snap
---
source: apollo-router/src/configuration/tests.rs
expression: "Configuration::default().validated_yaml"
---
plugins: ~

