router/apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__expansion_failure_missing_variable.snap
---
source: apollo-router/src/configuration/mod.rs
expression: error.to_string()
---
could not expand variable: TEST_CONFIG_UNKNOWN_WITH_NO_DEFAULT, environment variable not found
