router/apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__line_precise_config_errors_bad_type.snap
---
source: apollo-router/src/configuration/tests.rs
expression: error.to_string()
---
configuration had errors: 
1. at line 5

  
  supergraph:
    # The socket address and port to listen on
    # Defaults to 127.0.0.1:4000
    listen: true
            ^----- true is not valid under any of the schemas listed in the 'anyOf' keyword


